--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+App {
   text-align: center;
+  font-family: sans-serif;
+  margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.traffic-light {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 15px;
+  margin-top: 30px;
+}
+
+.light {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: gray;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-weight: bold;
+  color: black;
+}
+
+.light.green.active {
+  background-color: green;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.light.yellow.active {
+  background-color: yellow;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.light.red.active {
+  background-color: red;
+  color: white;
 }
